# div_by_2

./: Makefile.am  README.md  README.org  autogen.sh  configure.ac
.github/workflows/: test-build.yml
include/: utils.h
src/: main.c
tests/: test_main.c
