AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = -I m4 --install

src_main_c = src/main.c
src_utils_h = include/utils.h

include_HEADERS = $(src_utils_h)

lib_LTLIBRARIES = src/libdivby2.la
src_libdivby2_la_SOURCES = $(src_main_c)
src_libdivby2_la_CPPFLAGS = "-I${abs_srcdir}/include"

check_PROGRAMS = tests/test_main
tests_test_main_SOURCES = $(test_main_c) $(src_main_h)
tests_test_main_LDADD   = src/libdivby2.la
tests_test_main_LDFLAGS = -no-install
tests_test_main_CPPFLAGS = "-I${top_srcdir}/include"

TESTS = tests/test_main

sourcedir=$(datadir)/source
dist_source_DATA = $(src_main_c)
